@@ -6,7 +6,6 @@ package javax.jmdns.impl.tasks;
 
 import java.io.IOException;
 import java.util.Iterator;
-import java.util.Timer;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -19,21 +18,16 @@ import javax.jmdns.impl.ServiceInfoImpl;
 import javax.jmdns.impl.constants.DNSConstants;
 import javax.jmdns.impl.constants.DNSRecordClass;
 import javax.jmdns.impl.constants.DNSRecordType;
-import javax.jmdns.impl.constants.DNSState;
 
 /**
  * The ServiceResolver queries three times consecutively for services of a given type, and then removes itself from the timer.
  * <p/>
  * The ServiceResolver will run only if JmDNS is in state ANNOUNCED. REMIND: Prevent having multiple service resolvers for the same type in the timer queue.
  */
-public class ServiceResolver extends DNSTask
+public class ServiceResolver extends Resolver
 {
-    static Logger logger = Logger.getLogger(ServiceResolver.class.getName());
+    private static Logger logger = Logger.getLogger(ServiceResolver.class.getName());
 
-    /**
-     * Counts the number of queries being sent.
-     */
-    int _count = 0;
     private String _type;
 
     public ServiceResolver(JmDNSImpl jmDNSImpl, String type)
@@ -42,59 +36,61 @@ public class ServiceResolver extends DNSTask
         this._type = type;
     }
 
-    public void start(Timer timer)
+    /*
+     * (non-Javadoc)
+     *
+     * @see javax.jmdns.impl.tasks.Resolver#addAnswers(javax.jmdns.impl.DNSOutgoing)
+     */
+    @Override
+    protected boolean addAnswers(DNSOutgoing out)
     {
-        if (this._jmDNSImpl.getState() != DNSState.CANCELED)
+        boolean result = false;
+        long now = System.currentTimeMillis();
+        for (Iterator<? extends ServiceInfo> s = this._jmDNSImpl.getServices().values().iterator(); s.hasNext();)
         {
-            timer.schedule(this, DNSConstants.QUERY_WAIT_INTERVAL, DNSConstants.QUERY_WAIT_INTERVAL);
+            final ServiceInfoImpl info = (ServiceInfoImpl) s.next();
+            try
+            {
+                out.addAnswer(new DNSRecord.Pointer(info.getType(), DNSRecordType.TYPE_PTR, DNSRecordClass.CLASS_IN, DNSRecordClass.NOT_UNIQUE, DNSConstants.DNS_TTL, info.getQualifiedName()), now);
+                result = true;
+            }
+            catch (IOException exception)
+            {
+                logger.log(Level.WARNING, "addAnswers() exception ", exception);
+                break;
+            }
         }
+        return result;
     }
 
+    /*
+     * (non-Javadoc)
+     *
+     * @see javax.jmdns.impl.tasks.Resolver#addQuestions(javax.jmdns.impl.DNSOutgoing)
+     */
     @Override
-    public void run()
+    protected boolean addQuestions(DNSOutgoing out)
     {
         try
         {
-            if (this._jmDNSImpl.getState() == DNSState.ANNOUNCED)
-            {
-                if (_count++ < 3)
-                {
-                    logger.finer("run() JmDNS querying service");
-                    long now = System.currentTimeMillis();
-                    DNSOutgoing out = new DNSOutgoing(DNSConstants.FLAGS_QR_QUERY);
-                    out.addQuestion(DNSQuestion.newQuestion(_type, DNSRecordType.TYPE_PTR, DNSRecordClass.CLASS_IN, DNSRecordClass.NOT_UNIQUE));
-                    for (Iterator<? extends ServiceInfo> s = this._jmDNSImpl.getServices().values().iterator(); s.hasNext();)
-                    {
-                        final ServiceInfoImpl info = (ServiceInfoImpl) s.next();
-                        try
-                        {
-                            out.addAnswer(new DNSRecord.Pointer(info.getType(), DNSRecordType.TYPE_PTR, DNSRecordClass.CLASS_IN, DNSRecordClass.NOT_UNIQUE, DNSConstants.DNS_TTL, info.getQualifiedName()), now);
-                        }
-                        catch (IOException ee)
-                        {
-                            break;
-                        }
-                    }
-                    this._jmDNSImpl.send(out);
-                }
-                else
-                {
-                    // After three queries, we can quit.
-                    this.cancel();
-                }
-            }
-            else
-            {
-                if (this._jmDNSImpl.getState() == DNSState.CANCELED)
-                {
-                    this.cancel();
-                }
-            }
+            out.addQuestion(DNSQuestion.newQuestion(_type, DNSRecordType.TYPE_PTR, DNSRecordClass.CLASS_IN, DNSRecordClass.NOT_UNIQUE));
         }
-        catch (Throwable e)
+        catch (IOException exception)
         {
-            logger.log(Level.WARNING, "run() exception ", e);
-            this._jmDNSImpl.recover();
+            logger.log(Level.WARNING, "addQuestions() exception ", exception);
+            return false;
         }
+        return true;
+    }
+
+    /*
+     * (non-Javadoc)
+     *
+     * @see javax.jmdns.impl.tasks.Resolver#description()
+     */
+    @Override
+    protected String description()
+    {
+        return "querying service";
     }
 }
